# PropertyRentalNegotiator

./: .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md  TODO.md  negotiator-implementation-plan.html  render.yaml
.claude/: settings.json
backend/: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
backend/config/: agents.generated.json  auto_repair_pk.json  vertical.json
backend/src/app/: agent_factory.py  api.py  auth.py  benchmark.py  bridge.py  crud.py  db.py  live.py  main.py  make_agents.py  parse.py  report.py  seed.py  storage.py  tools.py  vertical.py
backend/supabase/migrations/: 20260718201325_init.sql  20260718210604_specs_user_id.sql  20260719090212_dealer_status.sql  20260719092524_quotes_property_ref.sql  20260719120000_call_status_detail.sql  20260719140000_dealer_phone_rating.sql  20260719160000_quotes_term_and_availability.sql
backend/tests/: test_agent_factory.py  test_api.py  test_auth.py  test_benchmark.py  test_bridge.py  test_crud.py  test_live.py  test_make_agents.py  test_parse.py  test_report.py  test_storage.py  test_tools.py  test_vertical.py
docs/: negotiator-implementation-plan.html
docs/superpowers/plans/: 2026-07-19-multi-tenant-auth.md
docs/superpowers/specs/: 2026-07-19-multi-tenant-auth-design.md  (+3 more)
frontend/: .env.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  characterCards.ts  dashboard.ts  elevenlabs.ts  mocks.ts  types.ts  useCallCenter.ts  useSpecLabel.ts
plan/: multiple-quotes-per-dealer.md  whole-term-and-delivery-confirmation.md
(+44 files in other folders)
