[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "NotTahaAli", email = "tahaali.6074+github@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
app = "app:main"

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
